--- a/stylesheets/menu.css
+++ b/stylesheets/menu.css
@@ -76,7 +76,7 @@ body{
   top: 20.104vw;
   left: 7.552vw;
   border: 0.208vw solid #FA5519;
-  background-image: url('../images/Maxim.png');
+  background-image: url('../images/maxim.png');
 }
 .reviewPics{
   display: none;
